add end game content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 /* Site Colors */
 :root {
     --primary-color: #0B132B;
-    --secondary-color: #2B3B56;
-    --primary-accent: #00BFFF;
-    --correct-accent: #18D885;
-    --incorrect-accent: #EC3A45;
+    --secondary-color: #1c2541;
+    --terciary-color: #2B3B56;
+    --primary-accent: #00aee9;
+    --correct-accent: #00bb6a;
+    --incorrect-accent: #e33843;
     --white: #FFFFFF;
 }
 /* End Site Colors */
@@ -12,6 +13,14 @@
 /* Utility Classes */
 .code {
     font-family: 'Fira Code', monospace;
+}
+
+.correct {
+    color: var(--correct-accent);
+}
+
+.incorrect {
+    color: var(--incorrect-accent);
 }
 /* End Utility Classes */
 
@@ -29,13 +38,15 @@ body {
 }
 
 button {
-    background-color: var(--secondary-color);
+    background-color: var(--terciary-color);
     color: var(--white);
     padding: 12px 18px;
     border: none;
     border-radius: 5px;
     font-size: 18px;
     letter-spacing: .03em;
+    box-shadow: 0 0 8px var(--primary-color);
+    margin: 15px;
 }
 
 button:hover {
@@ -47,7 +58,10 @@ button:hover {
     width: 90%;
     max-width: 1200px;
     margin: 60px auto;
-    padding: 60px;
+    padding: 50px 70px 70px 70px;
+    background-color: var(--secondary-color);
+    border-radius: 15px;
+    box-shadow: 0 0 12px #000000;
 }
 
 main {
@@ -58,14 +72,60 @@ main {
 /* Header Styles */
 header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 header h1 {
+    width: 100%;
+    margin-bottom: 30px;
+    text-align: center;
     font-size: 42px;
     letter-spacing: .03em;
     color: var(--primary-accent);
+    text-shadow: 0 0 12px #000000;
 }
+
+header #timer-display {
+    background-color: var(--correct-accent);
+    padding: 12px 18px;
+    border-radius: 5px;
+    font-size: 18px;
+    margin: 15px;
+}
+/* End Header Styles */
+
+/* Main Section Styles */
+#prompt {
+    margin: 15px;
+    text-align: center;
+}
+
+#prompt h2 {
+    font-size: 32px;
+    padding: .5em 0;
+    line-height: 1.5em;
+    letter-spacing: .03em;
+}
+
+#prompt h3 {
+    font-size: 28px;
+    padding: .5em 0;
+    line-height: 1.5em;
+    letter-spacing: .03em;
+}
+
+#prompt p {
+    font-size: 20px;
+    margin: 1em 0 1.5em 0;
+    line-height: 1.5em;
+    letter-spacing: .03em;
+}
+
+#options {
+    text-align: center;
+}
+/* End Main Section Styles */
 
